# flatwrite

./: .gitignore  .mcp.json  LICENSE  PLAN.md  README.md  app.js  demo-kashmir.md  fonts.css  index.html  index.js  openapi.yaml  package-lock.json  package.json  server.js  styles.css  tsconfig.base.json  vercel.json  wrangler.jsonc
api/: render.js  s.js  share.js  test.js
content/projects/: flatwrite.yaml
core/: auth.js  doc-engines.js  document-css.js  font-inventory.js  font-loader.js  inline-assets.js  io.js  rate-limit.js  render.js  scale-map.js
docs/: MCP-INTEGRATION.md  MCP.md  render-convergence.md
mcp/: MCP.md
mcp/flatwrite-render-server/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
public/: _headers  _redirects  app.js  extract-drop.js  fonts.css  index.html  server.js  styles.css  version.json  webmcp-shared.js  webmcp-tools.js  webmcp.js
public/.well-known/: model-context.apps.json  model-context.doc.json  model-context.docs.json
public/assets/: demo-solar.md
scripts/: build-fonts-css.mjs  render_remote.py
services/extract/: Dockerfile  README.md  fly.toml  pyproject.toml
services/extract/src/flatwrite_extract/: __init__.py  auth.py  converter.py  main.py  rules.py  validators.py
test/: TEST-CASES.md  export-parity.test.js  extract-drop.test.js  extract-worker.test.js  font-inventory.test.js  render.test.js  webmcp.test.js  worker.test.js
test/__snapshots__/: manifest-baseline.json
test/extract/: build_fixture_pptx.py  conftest.py  e2e_drop.py  probe_pptx.py  test_api.py  test_auth.py  test_rules.py
(+37 files in other folders)
